<resources>
    <string name="app_name">PcPulse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_registered_click_here_to_register">Not Registered ? Click here to Register.</string>
    <string name="products">Products</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="stores">Stores</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="products_menu">Products</string>
    <string name="my_cart_menu">My Cart</string>
    <string name="stores_menu">Stores</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="please_fill_information_correctly">Please fill information correctly.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiry_mm_yy">Expiry (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="total_price_0_00">Total Price: $0.00</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="register">Register</string>
    <string name="pcpulselogo">PcPulseLogo</string>
    <string name="emailhint">Email</string>
    <string name="password">Password</string>
    <string name="registerButtonText">Register</string>
    <string name="already_registered_click_here_to_login">Already Registered ? Click here to Login.</string>
    <string name="login">Login</string>
    <string name="sort">Sort</string>
    <string name="product_name">Product Name</string>
    <string name="price_0_00">Price: $0.00</string>
    <string name="remove">Remove</string>
    <string name="product_image">Product Image</string>
    <string name="more_options">More Options</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
</resources>