<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/custom_toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/please_fill_information_correctly"
            android:layout_marginBottom="20dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Address and City -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- State and Zip Code -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:hint="@string/state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/zip_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <!-- Credit Card Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/credit_card_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCreditCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <!-- Expiry Date -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:hint="@string/expiry_mm_yy">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExpiryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Security Code (CVV) -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:hint="@string/cvv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSecurityCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btnPlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/confirm_order"
            android:textSize="20sp"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</RelativeLayout>
